[gd_scene load_steps=3 format=2]

[ext_resource path="res://DFAEditorResources/Editor.gd" type="Script" id=1]
[ext_resource path="res://default_env.tres" type="Theme" id=2]

[node name="Editor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlphabetEdit" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
alignment = 2

[node name="Symbols" type="HBoxContainer" parent="AlphabetEdit"]
margin_right = 866.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="NewSymbol" type="TextEdit" parent="AlphabetEdit"]
margin_left = 870.0
margin_right = 970.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 9

[node name="AddAlphaButton" type="Button" parent="AlphabetEdit"]
margin_left = 974.0
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 9
size_flags_vertical = 10
text = "+"

[node name="StateEdit" type="VBoxContainer" parent="."]
margin_top = 104.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="States" type="VBoxContainer" parent="StateEdit"]
margin_right = 1024.0
margin_bottom = 442.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="StateEdit"]
margin_top = 446.0
margin_right = 1024.0
margin_bottom = 496.0

[node name="NewStateName" type="TextEdit" parent="StateEdit/HBoxContainer"]
margin_right = 253.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="AddStateButton" type="Button" parent="StateEdit/HBoxContainer"]
margin_left = 257.0
margin_right = 510.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
text = " + Add State  "

[node name="RunButton" type="Button" parent="StateEdit/HBoxContainer"]
margin_left = 514.0
margin_right = 767.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Run"

[node name="MenuButton" type="MenuButton" parent="StateEdit/HBoxContainer"]
margin_left = 771.0
margin_right = 1024.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Menu"
items = [ "Import", null, 0, false, false, 0, 0, null, "", false, "Export", null, 0, false, false, 1, 0, null, "", false ]

[node name="OpenFileDialog" type="FileDialog" parent="StateEdit/HBoxContainer/MenuButton"]
margin_right = 356.0
margin_bottom = 170.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
current_dir = "/mnt/A03CF9633CF9353E/Godot/DFAGen"
current_path = "/mnt/A03CF9633CF9353E/Godot/DFAGen/"

[node name="SaveFileDialog" type="FileDialog" parent="StateEdit/HBoxContainer/MenuButton"]
margin_right = 356.0
margin_bottom = 170.0
resizable = true
access = 2
current_dir = "/mnt/A03CF9633CF9353E/Godot/DFAGen"
current_path = "/mnt/A03CF9633CF9353E/Godot/DFAGen/"

[connection signal="pressed" from="AlphabetEdit/AddAlphaButton" to="." method="_on_AddAlphaButton_pressed"]
[connection signal="pressed" from="StateEdit/HBoxContainer/AddStateButton" to="." method="_on_AddStateButton_pressed"]
[connection signal="pressed" from="StateEdit/HBoxContainer/RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="file_selected" from="StateEdit/HBoxContainer/MenuButton/OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="StateEdit/HBoxContainer/MenuButton/SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
